# prismatic-backend

./: Cargo.toml  Makefile  README.md  api_log.json  diesel.toml  rustfmt.toml
migrations/2024-07-11-132532_prismatic_mysql_init/: up.sql
src/: infrastructure.rs  main.rs  middleware.rs  presentation.rs  schema.rs
src/application/: error.rs  usecase.rs
src/application/services/: mutate.rs
src/application/usecase/: delete.rs  diary.rs  init.rs  mutate.rs  result.rs
src/auth/: jwt.rs
src/domain/: error.rs
src/domain/entity/: diary.rs  user.rs
src/domain/models/: mutate.rs
src/domain/repository/: diary.rs  user.rs
src/infrastructure/: database.rs  error.rs
src/infrastructure/api/: openai.rs
src/infrastructure/database/: init.rs  models.rs  user.rs
src/presentation/: init.rs  routes.rs
src/presentation/delete/: controller.rs
src/presentation/diary/: controller.rs  request.rs  response.rs
src/presentation/handlers/: mutate.rs
src/presentation/init/: controller.rs  response.rs
src/presentation/mutate/: controller.rs  request.rs  response.rs
src/presentation/result/: controller.rs  request.rs
