[package]
name = "prismatic-diary"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
anyhow = "1.0.86"
async-trait = "0.1.81"
diesel = { version = "2.2.1", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
error = "0.1.9"
getset = "0.1.2"
r2d2 = "0.8.10"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
uuid = "1.10.0"
validator = "0.18.1"
validator_derive = "0.18.1"
